RESOLVED FIXED 42473
Fix unit error in calculating timings from ResourceLoadTiming API
https://bugs.webkit.org/show_bug.cgi?id=42473
Summary Fix unit error in calculating timings from ResourceLoadTiming API
Tony Gentilcore
Reported Friday, July 16, 2010 7:18:38 PM UTC
Fix unit error in calculating timings from ResourceLoadTiming API
Attachments
Patch (3.81 KB, patch)
2010-07-16 11:49 PDT, Tony Gentilcore
pfeldman: review+
Tony Gentilcore
Comment 1 Friday, July 16, 2010 7:49:23 PM UTC
Tony Gentilcore
Comment 2 Friday, July 16, 2010 8:21:58 PM UTC
Note You need to log in before you can comment on or make changes to this bug.